<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.presentation.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_input_edt_name"
        style="@style/InstaFormEditTextInput"
        app:errorTextAppearance="@style/InstaFormEditTextError"
        app:hintEnabled="false">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_edt_name"
            style="@style/InstaFormEditText"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_input_edt_password"
        style="@style/InstaFormEditTextInput"
        app:errorTextAppearance="@style/InstaFormEditTextError"
        app:hintEnabled="false">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_edt_password"
            style="@style/InstaFormEditText"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_input_edt_password_confirm"
        style="@style/InstaFormEditTextInput"
        app:errorTextAppearance="@style/InstaFormEditTextError"
        app:hintEnabled="false">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_edt_password_confirm"
            style="@style/InstaFormEditText"
            android:hint="@string/password_confirm"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.miguel_santos.notinstagram.common.view.LoadingButton
        android:id="@+id/register_name_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/continuee" />

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"
        android:background="@color/grayBorder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_tev_login"
        style="@style/InstaTextViewBase"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/already_has_account" />

</LinearLayout>