<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.presentation.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_image_logo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="48dp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                android:src="@drawable/instagram_logo_black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_edt_email"
                style="@style/InstaFormEditTextInput"
                app:boxStrokeColor="@color/blueEnable"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_edt_email"
                    style="@style/InstaFormEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_edt_password"
                style="@style/InstaFormEditTextInput"
                app:boxStrokeColor="@color/blueEnable"
                app:errorTextAppearance="@style/InstaFormEditTextError"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_edt_password"
                    style="@style/InstaFormEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.miguel_santos.notinstagram.common.view.LoadingButton
                android:id="@+id/login_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/FormContainer"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/grayBorder" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/InstaTextViewBase"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:text="@string/or" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn_enter_facebook"
                style="@style/InstaFormButton.Link"
                android:layout_gravity="center"
                android:drawableStart="@drawable/facebook_logo"
                android:drawablePadding="8dp"
                android:text="@string/enter_with_facebook"
                android:textAllCaps="false" />

            <View
                android:id="@+id/divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grayBorder" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_tev_register"
                style="@style/InstaTextViewBase"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/does_not_have_account" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>